# Travel

./: .env  .gitignore  pyproject.toml
Backend/: .env  agents.ipynb  hotels.py
Backend/Agents/: agents.ipynb
Backend/api/: filter_data.py  flights.py  hotels.py  invalid_latitude_response.json  main.py  pariis.json  paris-4-5.json  test_hotels_client.py  valid_response.json
Backend/api/data/: filtered.json  neglected.json  test-1-temp.json  test-2.json  test-4.json  test-5.json  test-6.json  test-8.json
Frontend/: app.py
Test/: filter_data_file.py
Test/data/: filtered.json  neglected.json  test-1.json  test-3.json  test-7.json
